--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node back.js"
+    "prod": "NODE_ENV=prod node back.js",
+    "dev": "NODE_ENV=dev nodemon --ignore public back.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/ZaptoInc/terminal#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "ws": "^8.13.0"
   }
 }
