added database support + created db for user (to test)

--- a/config_example.json
+++ b/config_example.json
@@ -1,6 +1,7 @@
 {
     "common":{
         "port":6969,
-        "jwtKey":"jwtKey"
+        "jwtKey":"jwtKey",
+        "database":"TerminalCommon"
     }
 }
