--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "lokijs": "^1.5.12",
     "nodemon": "^2.0.22",
     "ws": "^8.13.0"
   }
